--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-hello world
+Usuario <input type="text" id="user">
+Repositório <input type="text" id="reponame">
+<button>Vai buscar as issues</button>
+
+<table id="issuestable">
+    <tr><th>Numero</th><th>Titulo</th>
+</table>
