--- a/aula01-exe02.html
+++ b/aula01-exe02.html
@@ -43,7 +43,7 @@
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="page-header">
-					<h1>Aula 01 :: exercício 01 Closure</h1>
+					<h1>Aula 01 :: exercício 02 Prototype</h1>
 				</div>
 
 				<p class="lead">Página que lista issues de um repositório do Github, usando apenas jQuery.</p>
@@ -100,8 +100,9 @@
 		</div>
 	</footer>
 
+	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-	<script src="js/aula01-exe01.js"></script>
+	<script src="js/aula01-exe02.js"></script>
 </body>
 </html>
