--- a/index.html
+++ b/index.html
@@ -7,37 +7,12 @@
 	<meta name="description" content="Curso de AngularJS do ng-masters com Tony Lâmpada">
 	<meta name="author" content="Tiago Matos - web developer">
 	<title>Curso AngularJS do ng-masters :: Ministrador Tony Lâmpada</title>
-
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<!-- Fixed navbar -->
-	<nav class="navbar navbar-default navbar-fixed-top">
-		<div class="container">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Curso ng-masters</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand" href="#">Curso ng-masters</a>
-			</div>
-			<div id="navbar" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Aula 01 <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li><a href="index.html">Exercício 01</a></li>
-							<li><a href="aula01-exe02.html">Exercício 02</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div><!--/.nav-collapse -->
-		</div>
-	</nav>
+	<div ng-include="'navbar.html'"></div>
 
 	<div class="container">
 		<div class="row">
