--- a/aula01-exe02.html
+++ b/aula01-exe02.html
@@ -77,6 +77,7 @@
 
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.1/angular.min.js" type="text/javascript" ></script>
 	<script src="js/aula01-exe02.js"></script>
 </body>
 </html>
