--- a/aula02-exe01.html
+++ b/aula02-exe01.html
@@ -86,7 +86,7 @@
 
 				<div class="alert alert-success alert-dismissible" role="alert" ng-show="m.end">
 					<button type="button" class="close" ng-click="m.changeEnd()"><span aria-hidden="true">&times;</span></button>
-					<strong>Êta!</strong> Todas células morreram, fim!
+					<strong>Êta!</strong> Todas células morreram. FIM!
 				</div>
 
 				<table class="table table-bordered">
