--- a/aula02-exe01.html
+++ b/aula02-exe01.html
@@ -59,7 +59,7 @@
 							</div>
 
 							<div class="col-xs-4 col-sm-4">
-								<label class="control-label">Intervalo (ms)</label>
+								<label class="control-label">Intervalo <small>(ms)</small></label>
 								<input value="" name="interval" type="text" class="form-control" placeholder="Intervalo" ng-model="m.interval">
 							</div>
 						</div>
