--- a/aula02-exe01.html
+++ b/aula02-exe01.html
@@ -104,11 +104,11 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="row">
-				<div class="col-xs-12 col-md-6">
-					<p class="text-muted">Curso AngularJS</p>
+				<div class="col-xs-12 col-sm-6">
+					<p class="text-muted text-center title">Curso AngularJS</p>
 				</div>
-				<div class="col-xs-12 col-md-6">
-					<p class="text-muted text-right"><a href="http://www.tiagomatos.com" target="_blank">Tiago Matos - web developer</a></p>
+				<div class="col-xs-12 col-sm-6">
+					<p class="text-muted text-center powered"><a href="http://www.tiagomatos.com" target="_blank">Tiago Matos - web developer</a></p>
 				</div>
 			</div>
 		</div>
