--- a/aula02-exe01.html
+++ b/aula02-exe01.html
@@ -43,7 +43,7 @@
 					<h1>Aula 02 :: exercício 02 AngulifeJS</h1>
 				</div>
 
-				<p class="lead">Jogo da vida escrito em angularJS.</p>
+				<p class="lead">Jogo da vida escrito em AngularJS.</p>
 
 				<div class="row">
 					<div class="col-xs-12 col-sm-6">
