--- a/aula02-exe01.html
+++ b/aula02-exe01.html
@@ -101,7 +101,7 @@
 		</div>
 	</div>
 
-	<div ng-include="'navbar.html'"></div>
+	<div ng-include="'footer.html'"></div>
 	<script src="js/aula02-exe01.js"></script>
 </body>
 </html>
