--- a/aula02-exe01.html
+++ b/aula02-exe01.html
@@ -101,7 +101,22 @@
 		</div>
 	</div>
 
-	<div ng-include="'footer.html'"></div>
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6">
+					<p class="text-muted text-center title">Curso AngularJS</p>
+				</div>
+				<div class="col-xs-12 col-sm-6">
+					<p class="text-muted text-center powered"><a href="http://www.tiagomatos.com" target="_blank">Tiago Matos - web developer</a></p>
+				</div>
+			</div>
+		</div>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.1/angular.min.js" type="text/javascript"></script>
 	<script src="js/aula02-exe01.js"></script>
 </body>
 </html>
