--- a/aula02-exe01.html
+++ b/aula02-exe01.html
@@ -33,14 +33,13 @@
 		</div>
 	</div>
 
-
 	<div ng-include="'navbar.html'"></div>
 
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="page-header">
-					<h1>Aula 02 :: exercício 02 AngulifeJS</h1>
+					<h1>Aula 02 :: exercício 01 AngulifeJS</h1>
 				</div>
 
 				<p class="lead">Jogo da vida escrito em AngularJS.</p>
@@ -101,22 +100,11 @@
 		</div>
 	</div>
 
-	<footer class="footer">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-12 col-sm-6">
-					<p class="text-muted text-center title">Curso AngularJS</p>
-				</div>
-				<div class="col-xs-12 col-sm-6">
-					<p class="text-muted text-center powered"><a href="http://www.tiagomatos.com" target="_blank">Tiago Matos - web developer</a></p>
-				</div>
-			</div>
-		</div>
-	</footer>
+	<div ng-include="'footer.html'"></div>
 
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.1/angular.min.js" type="text/javascript"></script>
+	<script src="assets/angular/js/angular.min.js" type="text/javascript"></script>
 	<script src="js/aula02-exe01.js"></script>
 </body>
 </html>
