--- a/navbar.html
+++ b/navbar.html
@@ -27,6 +27,13 @@
 						<li><a href="aula02-exe01.html">Exercício 01</a></li>
 					</ul>
 				</li>
+
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Aula 03 <span class="caret"></span></a>
+					<ul class="dropdown-menu" role="menu">
+						<li><a href="aula03-exe01.html">Exercício 01</a></li>
+					</ul>
+				</li>
 			</ul>
 		</div><!--/.nav-collapse -->
 	</div>
