--- a/aula02-exe01.html
+++ b/aula02-exe01.html
@@ -33,7 +33,46 @@
 		</div>
 	</div>
 
-	<div ng-include="'navbar.html'"></div>
+	<!-- Fixed navbar -->
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Curso ng-masters</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">Curso ng-masters</a>
+			</div>
+
+			<div id="navbar" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Aula 01 <span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="index.html">Exercício 01</a></li>
+							<li><a href="aula01-exe02.html">Exercício 02</a></li>
+						</ul>
+					</li>
+
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Aula 02 <span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="aula02-exe01.html">Exercício 01</a></li>
+						</ul>
+					</li>
+
+					<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Aula 03 <span class="caret"></span></a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="aula03-exe01.html">Exercício 01</a></li>
+						</ul>
+					</li>
+				</ul>
+			</div><!--/.nav-collapse -->
+		</div>
+	</nav>
 
 	<div class="container">
 		<div class="row">
@@ -100,7 +139,18 @@
 		</div>
 	</div>
 
-	<div ng-include="'footer.html'"></div>
+	<footer class="footer">
+		<div class="container">
+			<div class="row">
+				<div class="col-xs-12 col-sm-6">
+					<p class="text-muted text-center title">Curso AngularJS</p>
+				</div>
+				<div class="col-xs-12 col-sm-6">
+					<p class="text-muted text-center powered"><a href="http://www.tiagomatos.com" target="_blank">Tiago Matos - web developer</a></p>
+				</div>
+			</div>
+		</div>
+	</footer>
 
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
