--- a/aula03-exe01.html
+++ b/aula03-exe01.html
@@ -87,8 +87,8 @@
 
 	<script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js" type="text/javascript"></script>
-	<script src="assets/angular/js/angular.min.js" type="text/javascript"></script>
-	<script src="assets/angular/js/angular-animate.min.js" type="text/javascript"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0-beta.6/angular.min.js" type="text/javascript"></script>
+	<script src="https://code.angularjs.org/1.4.0-beta.6/angular-animate.min.js" type="text/javascript"></script>
 	<script src="js/aula03-exe01.js"></script>
 	<script src="js/msgs.js"></script>
 </body>
